2007-07-11  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: More cleanup.

2007-07-10  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add a section for 'rgbcolor variable'.

	* docs/gnuplot.doc: Move plot style descriptions up by one major level.

	* docs/gnuplot.doc: Consistent use of '2D' and '3D'.

2007-07-06  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: There are two entries for 'ticslevel' which is a
	problem for more recent 'help'.  Remove one that says "see xyplane"
	so that new help goes directly to 'xyplane' just like old help.

2007-07-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (apply_zomm): Try an alternative path for replot after
	unzoom. This may or may not fix the problem in bug report #1746902.

2007-07-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots): Initialize
	start_token to 0 to quiet bogus compiler warnings.

2007-06-30  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/help.c (OutLine_InternalPager): Fix compilation when PIPES is not
	defined. Thanks to Dietmar Warning for the report.

2007-06-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_generate_pseudodata): Correct for logscale
	axes in splot.

2007-06-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (load_range): Revert change of 2004-03-15. This means
	that we do *not* clear the RANGE_REVERSE flag after applying the
	reversal. This is necessary for the upcoming "refresh" support, but
	also fixes a current bug:   
	set xrange [*:*] reverse; plot <foo>;  <zoom; zoom; unzoom>
	flag is now clear, and subsequent plots are drawn backwards

	* src/mouse.c (apply_zoom): Rework the save/restore mechanism for 
	axis ranges during zoom operations.  Preparation for "refresh"
	support.

2007-06-27  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/misc.c (iso_alloc):  Set p_count to zero when structure is
	initialized.
